Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.10.1 (2024-09-16)
-------------------

Bug fixes:

- Logging in the CRS class no longer tries to print representations of objects
  that may be NULL when searching for authority matches (#1445).

1.10.0 (2024-09-03)
-------------------

The package version, credits, and citation file have been updated. There have
been no other changes since 1.10.0rc1. Fiona is the work of 73 contributors,
including 25 new contributors since 1.9.0.

1.10.0rc1 (2024-08-21)
----------------------

This is the first release candidate for 1.10.0.

Changes:

- Mutable item access to Feature, Geometry, and Properties instances has been
  restored (reported in #1430). This usage should be avoided as instances of
  these classes will be immutable in a future version.
- The setup.cfg duplicates project configuration in pyproject.toml and has been
  removed.

1.10b3 (2024-07-29)
-------------------

Bug fixes:

- The sketchy, semi-private Python opener interfaces of version 1.10b2 have
  been replaced by ABCs that are exported from fiona.abc (#1415).
- The truncate VSI plugin callback has been implemented (#1413).

1.10b2 (2024-07-10)
-------------------

Bug fixes:

- The Pyopener registry and VSI plugin have been rewritten to avoid filename
  conflicts and to be compatible with multithreading. Now, a new plugin handler
  is registered for each instance of using an opener (#1408). Before GDAL 3.9.0
  plugin handlers cannot not be removed and so it may be observed that the size
  of the Pyopener registry grows during the execution of a program.
- A CSLConstList ctypedef has been added and is used where appropriate (#1404).
- Fiona model objects have a informative, printable representation again
  (#1380).

Packaging:

- PyPI wheels include GDAL 3.9.1 and curl 8.8.0.

1.10b1 (2024-04-16)
-------------------

Bug fixes:

- Fiona can again set fields with values that are instances of classes derived