@@ -7,7 +7,7 @@ environment:
 
     global:
         # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
-        # /E:ON and /V:ON options are not enabled in the batch script intepreter
+        # /E:ON and /V:ON options are not enabled in the batch script interpreter
         # See: http://stackoverflow.com/a/13751649/163740
         CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
         GDAL_HOME: "C:\\gdal"
