@@ -186,7 +186,7 @@ def collect(
                 # Log error and close up the GeoJSON, leaving it
                 # more or less valid no matter what happens above.
                 logger.critical(
-                    "failed to serialize file record %d (%s), " "quiting", i, exc
+                    "failed to serialize file record %d (%s), " "quitting", i, exc
                 )
                 sink.write("]")
                 sink.write(tail)
@@ -214,7 +214,7 @@ def collect(
                     )
                 else:
                     logger.critical(
-                        "failed to serialize file record %d (%s), " "quiting",
+                        "failed to serialize file record %d (%s), " "quitting",
                         i,
                         exc,
                     )
