@@ -8,6 +8,8 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 
 Bug fixes:
 
+- Several typos were found and fixed (#1448). One variable was renamed and one
+  the ContextVar in _vsipyopener.pyx was renamed.
 - Logging in the CRS class no longer tries to print representations of objects
   that may be NULL when searching for authority matches (#1445).
 
@@ -290,7 +292,7 @@ Deprecations:
 Changes:
 
 - Fiona's FionaDeprecationWarning now sub-classes DeprecationWarning.
-- Some test modules have beeen re-formatted using black.
+- Some test modules have been re-formatted using black.
 
 New features:
 
@@ -1017,7 +1019,7 @@ can't unhear Love Coffin.
 - New BytesCollection class (#215).
 - Add GDAL's OpenFileGDB driver to registered drivers (#221).
 - Implement CLI commands as plugins (#228).
-- Raise click.abort instead of calling sys.exit, preventing suprising exits
+- Raise click.abort instead of calling sys.exit, preventing surprising exits
   (#236).
 
 1.5.1 (2015-03-19)
